<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.demo.weather.Weather" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:weightSum="4" >

            <EditText
                android:id="@+id/etLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ems="10"
                android:inputType="text" />

            <Button
                android:id="@+id/btnLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/btnOk" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="60dp"
            android:weightSum="3" >

            <ImageView
                android:id="@+id/ivCurrent"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/curImg"
                android:src="@drawable/img" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3" >

                 <TextView
                    android:id="@+id/tvDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/day"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                 
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:text="@string/date"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

               
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/lblHumi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblTemp"
            android:layout_below="@+id/lblTemp"
            android:layout_marginTop="16dp"
            android:text="@string/humi"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/lblCond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblHumi"
            android:layout_below="@+id/lblHumi"
            android:layout_marginTop="16dp"
            android:text="@string/cond"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/lblTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout2"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="44dp"
            android:text="@string/temp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblCond"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="14dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivDay1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/curImg"
                    android:src="@drawable/img" />

                <ImageView
                    android:id="@+id/ivDay2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/curImg"
                    android:src="@drawable/img" />

                <ImageView
                    android:id="@+id/ivDay3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/curImg"
                    android:src="@drawable/img" />

                <ImageView
                    android:id="@+id/ivDay4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/curImg"
                    android:src="@drawable/img" />
                <ImageView
                    android:id="@+id/ivDay5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/curImg"
                    android:src="@drawable/img" />
            </LinearLayout>
        </HorizontalScrollView>
    </RelativeLayout>

</ScrollView>